# resume-parser-api

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
src/: config.py  exceptions.py  health.py  logging.py  main.py  rate_limit.py
src/auth/: base.py  dependencies.py  env.py  factory.py
src/extraction/: __init__.py  base.py  docx.py  factory.py  pdf.py  quality.py
src/llm/: __init__.py  prompts.py  schemas.py  service.py  validation.py
src/ocr/: __init__.py  imaging.py  prompts.py  service.py
src/parsing/: dependencies.py  router.py  schemas.py
src/pipeline/: __init__.py  graph.py  nodes.py  service.py  state.py
src/providers/: base.py  exceptions.py  factory.py  openrouter.py
tests/: conftest.py
tests/e2e/: conftest.py  test_parse_e2e.py
tests/fixtures/: sample_resume.docx
tests/integration/: conftest.py  test_auth.py  test_parse.py  test_rate_limiting.py
tests/unit/: test_config.py  test_extraction.py
tests/unit/test_extraction/: conftest.py  test_docx.py  test_factory.py  test_pdf.py  test_quality.py
tests/unit/test_llm/: __init__.py  test_prompts.py  test_schemas.py  test_service.py  test_validation.py
tests/unit/test_ocr/: __init__.py  conftest.py  test_imaging.py  test_prompts.py  test_service.py
tests/unit/test_pipeline/: test_graph.py  test_nodes.py  test_routing.py
tests/unit/test_providers/: test_factory.py  test_openrouter.py
