[project]
name = "resume-parser-api"
version = "0.0.0"
description = "Open-source resume parsing engine with FastAPI and LangGraph"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0,<1.0.0",
    "uvicorn[standard]>=0.40.0,<1.0.0",
    "python-multipart>=0.0.22,<1.0.0",
    "pydantic>=2.12.0,<3.0.0",
    "pydantic-settings>=2.13.0,<3.0.0",
    "slowapi>=0.1.9,<1.0.0",
    "structlog>=24.4.0,<25.0.0",
    "pymupdf>=1.27.0,<2.0.0",
    "python-docx>=1.2.0,<2.0.0",
    "langgraph>=1.0.8,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=0.26.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.15.0,<1.0.0",
    "mypy>=1.19.0,<2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -m 'not e2e'"
markers = ["e2e: hits real external services (deselect with '-m not e2e')"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/llm/prompts.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "fitz"
ignore_missing_imports = true
